--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="welcome">Quote Generator</header>
     <div class="container">
       <div class="quote-box">
-        <p id="quote">"Quote goes here..."</p>
+        <p id="quote">"Quote"</p>
         <small id="author">- Author</small>
       </div>
       <button id="btn">New Quote</button>
