--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <header class="welcome">Quote Generator</header>
+
+    <p>
+      Name: <input id="input" />
+      <button onclick="press()">Greet</button>
+    </p>
+    <p id="output"></p>
     <div class="container">
       <div class="quote-box">
         <p id="quote">"Quote"</p>
