--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="welcome">Quote Generator</header>
     <div class="container">
       <div class="quote-box">
-        <p id="quote">"Quote"</p>
-        <small id="author">- Author</small>
+        <p id="quote">Click the button and see what happens</p>
+        <small id="author"></small>
       </div>
       <button id="btn">New Quote</button>
     </div>
